--- a/index.html
+++ b/index.html
@@ -3,50 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Concert Surprise!</title>
+    <title>Concert Surprise</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            background-color: #f9f9f9;
-            color: #333;
+            background-image: url('[Insert Background Image URL]');
+            background-size: cover;
+            background-position: center;
+            color: #fff; /* White text to contrast with dark background */
             margin: 0;
             padding: 20px;
         }
         h1 {
             font-size: 2.5rem;
             margin-top: 50px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Text shadow for readability */
         }
         p {
             font-size: 1.2rem;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
-        .ticket {
+        .photo {
             margin-top: 20px;
-            padding: 20px;
-            border: 2px dashed #aaa;
-            display: inline-block;
-            background-color: #fff;
+        }
+        .photo img {
+            max-width: 90%;
+            height: auto;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
         }
         .audio-player {
             margin-top: 20px;
+        }
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2rem;
+            }
+            p {
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
 <body>
     <h1>Surprise!</h1>
-    <p>Happy 2 Years Natalie! I thought it wouldve been kinda obvious by now butttt I got us tix to see Cigs After Sex! I love you beautiful!!!</p>
+    <p>Happy 2 Years Love! Thought you wouldve caught the hints by now haha, but I got us tix to Cigs After Sex!</p>
     
-    <div class="ticket">
-        <h2>Concert Details</h2>
-        <p>Date: [October 2nd]</p>
-        <p>Venue: [Fiddlers Green]</p>
-        <p>Seats: [General Admission]</p>
-        <!-- You can also add a link to the tickets -->
-        <a href="[Insert Ticket Link]" target="_blank">View Your Tickets Here</a>
+    <!-- Replace concert info with the picture -->
+    <div class="photo">
+        <img src="[Insert Your Picture URL]" alt="Picture of us">
     </div>
 
     <div class="audio-player">
-        <h2>Your lips my lips...?</h2>
+        <h2>Enjoy the Music While You Wait</h2>
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0yc6Gst2xkRu0eMLeRMGCX?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 </body>
