--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            background-image: url('[Insert Background Image URL]');
+            background-image: url('https://github.com/blockprogrammer/concertQR/blob/5a36dc88c3f9e101eb4df22669343e3ae522457a/background.jpeg');
             background-size: cover;
             background-position: center;
             color: #fff; /* White text to contrast with dark background */
@@ -53,7 +53,7 @@
     
     <!-- Replace concert info with the picture -->
     <div class="photo">
-        <img src="[Insert Your Picture URL]" alt="Picture of us">
+        <img src="https://github.com/blockprogrammer/concertQR/blob/0c280fd45aa8d42d55c3a6d302656599f6c2b833/IMG_0360.jpeg" alt="Picture of us">
     </div>
 
     <div class="audio-player">
