--- a/index.html
+++ b/index.html
@@ -5,38 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concert Surprise</title>
     <style>
+        /* General Body Styling */
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            background-image: url('https://raw.githubusercontent.com/blockprogrammer/concertQR/main/background.jpeg');
+            background-image: url('https://raw.githubusercontent.com/blockprogrammer/concertqr/main/background.jpeg');
             background-size: cover;
             background-position: center;
-            color: #fff; /* White text to contrast with dark background */
+            color: #fff; /* White text for readability */
             margin: 0;
             padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
+
+        /* Text Shadow for readability */
+        h1, p {
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+        }
+
+        /* Header Styling */
         h1 {
             font-size: 2.5rem;
-            margin-top: 50px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Text shadow for readability */
+            margin-top: 10px;
+            font-weight: 400;
         }
+
         p {
             font-size: 1.2rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            margin: 0 auto;
+            width: 90%;
         }
-        .photo {
-            margin-top: 20px;
-        }
+
+        /* Image Styling */
         .photo img {
-            max-width: 90%;
+            max-width: 300px;
             height: auto;
             border-radius: 12px;
+            margin-top: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
         }
-        .audio-player {
-            margin-top: 20px;
+
+        /* Spotify Player Styling */
+        .spotify-player {
+            margin-bottom: 20px;
         }
-        /* Responsive Design */
+
+        iframe {
+            border-radius: 12px;
+            width: 250px;
+            height: 80px; /* Smaller height */
+        }
+
+        /* Make it responsive */
         @media (max-width: 768px) {
             h1 {
                 font-size: 2rem;
@@ -44,21 +68,29 @@
             p {
                 font-size: 1rem;
             }
+            .photo img {
+                max-width: 90%;
+            }
+            iframe {
+                width: 220px;
+                height: 70px;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Surprise!</h1>
-    <p>Happy 2 Years Love! Thought you wouldve caught the hints by now haha, but I got us tix to Cigs After Sex!</p>
-    
-    <!-- Replace concert info with the picture -->
-    <div class="photo">
-        <img src="https://raw.githubusercontent.com/blockprogrammer/concertQR/main/IMG_0360.jpeg" alt="Picture of us">
+    <!-- Spotify Embed at the Top -->
+    <div class="spotify-player">
+        <iframe src="https://open.spotify.com/embed/track/[SpotifyTrackID]?utm_source=generator&autoplay=1" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
 
-    <div class="audio-player">
-        <h2>Enjoy the Music While You Wait</h2>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0yc6Gst2xkRu0eMLeRMGCX?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <!-- Sentimental Header and Message -->
+    <h1>Surprise, my love ❤️</h1>
+    <p>Here's something special, just for us. I can't wait to share this moment with you. Our song, our night, our memories. I love you more than words can say. 💕</p>
+
+    <!-- Picture of You and Her -->
+    <div class="photo">
+        <img src="https://raw.githubusercontent.com/blockprogrammer/concertqr/main/IMG_0360.jpeg" alt="Picture of us">
     </div>
 </body>
 </html>
