--- a/index.html
+++ b/index.html
@@ -81,12 +81,17 @@
 <body>
     <!-- Spotify Embed at the Top -->
     <div class="spotify-player">
-        <iframe src="https://open.spotify.com/embed/track/[SpotifyTrackID]?utm_source=generator&autoplay=1" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        <iframe style="border-radius:12px; width:300px; height:80px;" 
+        src="https://open.spotify.com/embed/track/0yc6Gst2xkRu0eMLeRMGCX?utm_source=generator&theme=0&autoplay=1" 
+        frameBorder="0" 
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+        loading="lazy">
+</iframe>
     </div>
 
     <!-- Sentimental Header and Message -->
-    <h1>Surprise, my love ❤️</h1>
-    <p>Here's something special, just for us. I can't wait to share this moment with you. Our song, our night, our memories. I love you more than words can say. 💕</p>
+    <h1>Surprise!!!</h1>
+    <p>Im shocked you havent caught onto the hints, but I got us tix to Cigs After Sex, I love you so much Natalie, thank you for two years!</p>
 
     <!-- Picture of You and Her -->
     <div class="photo">
